[package]
name = "cold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.20"
object = { version = "0.34.0", features = ["write"] }
typed-arena = "2.0.2"
